# avery

./: .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  RUN.md  build.zig  grub.cfg  grub_nographic.cfg  justfile  linker.ld  mkdisk_apple.sh
.github/workflows/: build.yml  ionicfs.yml  rust_tools.yml
boot/: boot.asm  vga_boot.asm
docs/: arf.md  dir.md  drivers.md  ionicfs.md  kernext.md  syscalls.md
drivers/: avery.h  simple.c
drivers/drvpack/: Cargo.toml  README.md
fusion/: fusion.zig
include/: common.h  console.h  multiboot2.h  vga.h
include/disk/: ata.h  fat32.h
include/drivers/: keyboard.h  serial.h  timer.h
include/graphics/: framebuffer.h  vbe.h
include/system/: gdt.h  idt.h  irq.h  isr.h  memory.h
kernel/: common.c  init.zig  main.c  multiboot2.c  system.zig
kernel/boot/: boot_drv.zig  boot_tests.zig  interfaces.zig  multiboot2.zig
kernel/console/: diskutil.c  init.c
kernel/disk/: ata.c  fat32.c
kernel/drivers/: keyboard.c  serial.c  timer.c  vga.c
kernel/fs/: vfs.zig
kernel/graphics/: framebuffer.c  framebuffer.zig  terminal.zig  text_vga.zig  vbe.c
kernel/lib/: input.zig  memory.zig  output.zig  outputs.zig  path.zig  string.zig  time.zig
tests/: README.md  lib.ad  lib.asm  name.asm  simple.asm  simple2.ad  simple2.asm
tools/ionicfs/: CMakeLists.txt  README.md
tools/ionicfs/include/: commands.hpp  utils.hpp
tools/ionicfs/src/: copy.cpp  directory.cpp  format.cpp  info.cpp  main.cpp  read.cpp  remove.cpp  utils.cpp
tools/ionicfs/tests/: huge.txt  simple.txt
(+61 files in other folders)
